Add exception handling